# agc-pico

./: .clang-format  .clang-tidy  .pre-commit-config.yaml  Backtrace.c  CMakeLists.txt  NullAPI.c  SocketAPI.c  agc_cli.c  agc_disassembler.c  agc_engine.c  agc_engine.h  agc_engine_init.c  agc_simulator.c  core  dsky.c  dsky.h  flash.bash  flash_audio.bash  flash_sd_card.bash  main.c  platformio.ini  program.bash  ringbuffer.c  ringbuffer.h  ringbuffer_api.c  yaAGC.h
Pico_Audio/: CMakeLists.txt  main.c  pico_extras_import_optional.cmake  pico_sdk_import.cmake
Pico_Audio/lib/audio_data/: CMakeLists.txt  audio_data.c  audio_data.h
Pico_Audio/lib/audio_pio/: CMakeLists.txt  audio_pio.c  audio_pio.h
resources/: profile.json
src/: agc_cli.c  agc_engine.c  agc_simulator.c  agc_simulator.h  dsky.c  main.c  yaAGC.h
src/cli/: CMakeLists.txt  agc_cli.c  agc_cli.h  dsky_cli.c  dsky_output_handler.c  file.h  main.c  timer.c  timer.h  us_time.c
src/core/: agc_engine.c  agc_engine.h  agc_engine_init.c  agc_io_handler.c  agc_simulator.c  agc_simulator.h  dsky.c  dsky.h  dsky_dump.c  dsky_dump.h  profile.c  profile.h  rfopen.c  ringbuffer.c  ringbuffer.h  ringbuffer_api.c  us_time.h  yaAGC.h
src/pico/: CMakeLists.txt  audio_pio.c  audio_pio.h  dsky_output_handler.c  dsky_output_handler.h  hw_config.c  main.c  max7221.c  my_sd_card.c  sd_card.c  spi.c  spi.h  times.c  times.h  ws2812.c
